tempfile/derive_builder/tests/compile-fail/deny_empty_default.stderr
error: Unknown literal value ``
 --> $DIR/deny_empty_default.rs:8:25
  |
8 |     #[builder(default = "")]
  |                         ^^
